# vsphere-mcp-server

./: pyproject.toml  requirements.txt
