[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vsphere-mcp-server"
version = "0.1.1"
description = "MCP server for VMware vSphere infrastructure management"
authors = [{name = "Rory McMahon", email = "rory.mcmahon@vocus.com.au"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp==1.23.0",
    "requests==2.32.5",
    "urllib3==2.5.0",
]

keywords = ["mcp", "vsphere", "vmware", "virtualization", "infrastructure"]

[project.urls]
Homepage = "https://github.com/InfraMCP/vsphere-mcp-server"
Repository = "https://github.com/InfraMCP/vsphere-mcp-server"
Issues = "https://github.com/InfraMCP/vsphere-mcp-server/issues"
Documentation = "https://github.com/InfraMCP/vsphere-mcp-server#readme"

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "black==24.8.0",
    "isort==5.13.2",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
    "pylint>=3.0.0",
]
security = [
    "safety>=3.0.0",
    "pip-audit>=2.6.0",
]

[project.scripts]
vsphere-mcp-server = "vsphere_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
